# HomeWorkCPP2.10.2

./: CMakeLists.txt  HomeWorkCPP2.6.3.cpp  Parallelogram.cpp  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectrangle.cpp  Rectrangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  TriangleEquil.cpp  TriangleEquil.h  TriangleIsos.cpp  TriangleIsos.h  TriangleRight.cpp  TriangleRight.h
